--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section>
             <h2>8 İyi Şeyden Biri</h2>
-            <p>Pastafaryanizmin temel prensiplerinden biri, her Cuma makarna yemek ve bira içmektir. Çünkü Uçan Spagetti Canavarı böyle istemiştir.</p>
+            <p>Pastafaryanizmin temel prensiplerinden biri, her Cuma makarna yemek. Çünkü Uçan Spagetti Canavarı böyle istemiştir.</p>
         </section>
     </main>
 
