--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -21,12 +21,12 @@
     <main>
         <section>
             <h2>Hakkımızda</h2>
-            <p>Pastafaryanizm, 2005 yılında Bobby Henderson tarafından kurulmuş bir inanç sistemidir. Amacımız, bilimsel eğitim ve din özgürlüğü konularında farkındalık yaratmaktır.</p>
+            <p>amacımız tüm dünyada makarnayı bedava yapmak</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Pastafaryanizm Topluluğu. Tüm hakları saklıdır.</p>
+        <p>&copy; 2025 tunahan. Tüm hakları saklıdır.</p>
     </footer>
 </body>
 </html>
