--- a/iletisim.html
+++ b/iletisim.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Pastafaryanizm Topluluğu. Tüm hakları saklıdır.</p>
+        <p>&copy; 2025 tunahan. Tüm hakları saklıdır.</p>
     </footer>
 </body>
 </html>
