--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Pastafaryanizm</h1>
+        <h1>Pastafaryanizm - tunahan tarafından</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Ana Sayfa</a></li>
