--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <h2>Pastafaryanizm Nedir?</h2>
             <p>Pastafaryanizm, Uçan Spagetti Canavarı'nın (Flying Spaghetti Monster) inanç sistemidir. Mizahi ve eleştirel bir yaklaşımla din, bilim ve eğitim gibi konulara değinir.</p>
-            <img src="fsm.png" alt="Uçan Spagetti Canavarı" width="300">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.goalcast.com%2Fwp-content%2Fuploads%2F2022%2F09%2Fflying-spaghetti-monster-feature.gif&f=1&nofb=1&ipt=15d4131afc94b7e617fcd21e4c073147557eb0f6b9c9e21ff39adf7d48d6e375&ipo=images" alt="Uçan Spagetti Canavarı" width="300">
         </section>
 
         <section>
